Made a shiny button

--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
             <input type="text" id="namePokemon" placeholder="Digite o nome ou número do Pokemon">
             <input type="submit" value="" class="btn">
         </form>
+        <button class="btnShiny"></button>
         <div id="contPokemon">
         </div>
         <div id="imgPokemon">
         </div>
         <div id="imgType">
         </div>
+        
     </main>
     
     <script src="script.js"></script>
